--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -46,16 +46,35 @@
                 <li class="titulo" th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
             </ul>
         </div>
+
+        <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
+        <a th:href="@{/subir-archivo}" class="btn_subir_archivos">Subir archivos</a>
+
+        <div>
+            <p>blablaba</p>
+            <p>blablaba</p>
+            <p>blablaba</p>
+            <a href="#" class="ver_mas">Conocer más...</a>
+        </div>
+        <div>
+            <ul>
+                <li>Archivos</li>
+                <li>Grupos</li>
+            </ul>
+        </div>
+
         <div class="estructura box_columnaUno">
             <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
             <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
             <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
             <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
+
         </div>
     </aside>
 
     <section class="columnaDos">
         <article class="estructura">
+
             <div th:replace="templates/form-publicacion :: form-publi(${publicacion})"></div>
         </article>
         <article class="box_ordenarPor">
@@ -66,6 +85,7 @@
                     <option value="p">Principal</option>
                     <option value="r">Recientes</option>
                 </select>
+
             </form>
         </article>
             <!-- se reemplaza por el articulo que contiene c/u de las publis en divTarjeta -->
@@ -91,10 +111,6 @@
 <script type="module" th:src="@{/js/publicacionBtnFunciones.js}"></script>
 
 <script type="module" th:src="@{js/tema.js}"></script>
-
-
-
-
 
 </body>
 </html>
