agregue al home un icono y en vez de ser subir archivo se llama mis archivos... lo mismo en el html de subir archivos.. el mismo icono y le agregue un css para mostrar la lista de archivos mas prolija... Hay dos servicios nuevos, el de mostrar y el de mostrarImpl...

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -55,7 +55,9 @@
             <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
             <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
             <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
-            <a th:href="@{/subir-archivo}" class="btn_subir_archivos">Subir archivos</a>
+            <a th:href="@{/subir-archivo}" class="btn_subir_archivos">
+                <img th:src="@{/imagenes/pdf-icon.png}" alt="icono-pdf">Mis archivos
+            </a>
             <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
             <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
         </div>
