--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/subir-archivo.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/subir-archivo.html
@@ -3,38 +3,57 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Cuestionario UNINET</title>
+    <title>Subir PDF - UNINET</title>
+    <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" th:href="@{/css/variables.css}"/>
+    <link rel="stylesheet" th:href="@{/css/base.css}"/>
     <link rel="stylesheet" th:href="@{/css/home.css}"/>
-    <link rel="stylesheet" href="../../../resources/core/css/home.css"/>
+    <link rel="stylesheet" th:href="@{/css/archivos-subidos.css}"/>
+
 </head>
 <body>
 <header>
-    <nav class="navbar">
-        <a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}" alt="isologo"></a>
-        <div>
-            <a href="/spring/miPerfil">Mi Perfil</a>
-            <a href="/spring/miPerfil">Notificaciones</a>
-            <a href="/spring/miPerfil">Mensajes</a>
-        </div>
-    </nav>
+    <nav th:replace="templates/nav :: nav"></nav>
 </header>
 <main class="contenedor_general">
-    <aside class="estructura columnaUno">
-        <div>
-            <img class="user" th:src="@{/imagenes/user.png}" alt="Img usuario">
-            <!--<img class="user" src="../../../resources/core/imagenes/user.png">-->
+    <aside class="columnaUno">
+        <div class="estructura">
+            <img class="user"
+                 th:src="@{/imagenes/{img}(img=${usuario.fotoPerfil != null ? usuario.fotoPerfil : 'user.png'})}"
+                 alt="Foto de perfil">
             <h2 class="palabra" th:text= "${usuario.nombre}"></h2>
             <h2 class="palabra" th:text= "${usuario.apellido}"></h2>
             <ul>
                 <li class="titulo" th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
             </ul>
         </div>
+        <div class="estructura box_columnaUno">
+            <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
+            <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
+            <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
+            <a th:href="@{/subir-archivo}" class="btn_subir_archivos"><img th:src="@{/imagenes/pdf-icon.png}">Mis archivos</a>
+            <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
+            <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
+        </div>
     </aside>
     <section class="columnaDos">
+        <article class="estructura">
+            <h3>Mis archivos</h3>
+            <div class="archivos-subidos">
+                <ul>
+                    <li th:each="archivo : ${archivos}">
+                        <a th:href="@{'/archivos_pdf/' + ${archivo}}" target="_blank">
+                            <img th:src="@{/imagenes/pdf-icon.png}" alt="PDF" class="icono-pdf">
+                            <span th:text="${archivo}">Archivo.pdf</span>
+                        </a>
+                </ul>
+            </div>
+        </article>
         <article class="estructura">
             <h3>Subir archivos pdf</h3>
             <form th:action="@{/subir-archivo}" method="POST" enctype="multipart/form-data">
@@ -43,9 +62,33 @@
             </form>
             <p th:if="${mensaje}" th:text="${mensaje}" style="color: green;"></p>
         </article>
+
+        <article class="estructura">
+            <div>
+                <h3>Generar Resumen o cuestionario</h3>
+                <p> aca va la funcion de la IA</p>
+            </div>
+        </article>
     </section>
+
+    <aside class="estructura columnaTres">
+        <div class="container_profile">
+            <h2>Alumnos cursando...</h2>
+            <p>Ingeniería en Sistemas</p>
+        </div>
+        <div class="recomendaciones_users" >
+            <img class="user2" th:src="@{/imagenes/user2.png}">
+            <img class="user2" th:src="@{/imagenes/user2.png}">
+            <img class="user2" th:src="@{/imagenes/user2.png}">
+            <img class="user2" th:src="@{/imagenes/user2.png}">
+            <img class="user2" th:src="@{/imagenes/user2.png}">
+        </div>
+    </aside>
 
 
 </main>
+
+<script type="module" th:src="@{js/tema.js}"></script>
+
 </body>
 </html>
