--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -179,7 +179,10 @@ select option:hover {
     height: 1px;
     background-color: var(--verde);
     margin: 0.5rem auto;
- }
+}
+.input-oculto{
+    display: none;
+}
 
 
 
