--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -22,21 +22,11 @@
 <body>
 <header>
     <nav th:replace="templates/nav :: nav"></nav>
-    <!--<nav class="navbar">
-        <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
-        <div>
-            <button id="btn-tema" class="boton-tema"><img class="isologo" src="../../../resources/core/imagenes/modo-oscuro.png"></button>
-            <a href="/spring/miPerfil">Mi Perfil</a>
-            <a href="/spring/miPerfil">Notificaciones</a>
-            <a href="/spring/miPerfil">Mensajes</a>
-            <a href="/spring/miPerfil">Cerrar sesión</a>
-        </div>
-    </nav>-->
 </header>
 <main class="contenedor_box_general">
     <aside class="estructura contenedor_usuario" >
         <img class="user"
-             th:src="@{/imagenes/{img}(img=${usuario.fotoPerfil != null ? usuario.fotoPerfil : 'user.png'})}"
+             th:src="@{${usuario.fotoPerfil != null ? '/' + usuario.fotoPerfil : '/imagenes/user.png'}}"
              alt="Foto de perfil">
 
         <div class="contenedor_usuario_btn">
