--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/form-publicacion.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/form-publicacion.html
@@ -4,8 +4,8 @@
 
 
 <form  th:fragment="form-publi(publicacion)" class="box_comentario" method="POST" action="/spring/publicaciones"  enctype="multipart/form-data">
-    <textarea name="descripcion" id="publicacion" placeholder="Escribe algo"></textarea>
-    <input type="file" name="archivos" accept=".jpg,.jpeg,.png,.pdf" multiple />
+    <textarea name="descripcion" id="publicacion" placeholder="¿Qué estas pensando?"></textarea>
+    <input class="input-oculto" type="file" name="archivos" accept=".jpg,.jpeg,.png,.pdf" multiple />
     <p th:if="${errorPubli != null}" th:text="${errorPubli}" class="error"></p>
 
 
