--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -17,6 +17,7 @@ a {
 .estructura{
     border-radius: 1rem;
     padding: 2rem;
+    position:relative;
 }
 .palabra{
     font-size: 2rem;
@@ -229,9 +230,23 @@ a {
     border-bottom: 1px solid #ccc;
     margin: 10px 0;
 }
+.delete-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.delete-logo {
+    width: 24px;
+    height: 24px;
+}
 
 /*pdf*/
-/* Asegurate que el contenedor del canvas no se expanda más del tamaño del padre */
+/* Asegura que el contenedor del canvas no se expanda más del tamaño del padre */
 .archivo-pdf {
     max-width: 100%;
     margin-bottom: 15px;
