--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -55,5 +55,21 @@
     </div>
 </main>
 <script type="module" th:src="@{js/tema.js}"></script>
+
+<!--<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const form = document.querySelector("form");
+        const emailInput = document.getElementById("email");
+
+        form.addEventListener("submit", function (event) {
+            const email = emailInput.value.trim();
+            if (!email.endsWith("@unlam.edu.ar")) {
+                event.preventDefault(); // Evita que se envíe el formulario
+                alert("El email debe ser institucional");
+            }
+        });
+    });
+</script>-->
+
 </body>
 </html>
