Ya no se rompe la columna de la izquierda al hacer publicaciones y/o comentar.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -72,17 +72,17 @@
         </div>
 
     </section>
-    <aside class="estructura columnaTres">
-        <div class="container_profile">
+    <aside class="columnaTres">
+        <div class="estructura">
             <h2>Aumnos cursando...</h2>
             <p>Ingeniería en Sistemas</p>
-        </div>
-        <div class="recomendaciones_users" >
-            <img class="user2" th:src="@{/imagenes/user2.png}">
-            <img class="user2" th:src="@{/imagenes/user2.png}">
-            <img class="user2" th:src="@{/imagenes/user2.png}">
-            <img class="user2" th:src="@{/imagenes/user2.png}">
-            <img class="user2" th:src="@{/imagenes/user2.png}">
+            <div class="recomendaciones_users" >
+                <img class="user2" th:src="@{/imagenes/user2.png}">
+                <img class="user2" th:src="@{/imagenes/user2.png}">
+                <img class="user2" th:src="@{/imagenes/user2.png}">
+                <img class="user2" th:src="@{/imagenes/user2.png}">
+                <img class="user2" th:src="@{/imagenes/user2.png}">
+            </div>
         </div>
     </aside>
 </main>
