--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -2,12 +2,14 @@
 
 * { box-sizing: border-box; }
 
-html,body { margin:0; padding:0; height:100vh; }
+html,body { margin:0; padding:0; height:100%; }
 body{
   font-family: var(--font-family);
   background-color: var(--background);
   color: var(--texto);
   box-sizing: border-box;
+  width: 95%;
+  margin: 0 auto;
 }
 
 /* Links globales */
