--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -49,7 +49,7 @@
 
         <button id="btn-registrarme" class="btn" Type="Submit">Registrarme</button>
             <a href="login.html">Volver atrás</a>
-        <p th:if="${error != null}" cclass="error" th:text="'Error ' + ${error}">
+        <p th:if="${error != null}" class="error" th:text="'Error ' + ${error}">
         </p>
       </form>
     </div>
