--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -66,7 +66,18 @@ select option:hover {
   color: var(--texto-sec);
   padding: 1.25rem;
 }
-
+.botones_acciones {
+    all: unset; /* borra todos los estilos nativos del navegador */
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.botones_acciones img {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+}
 /* Botón base */
 .btn {
   background: var(--verde);
@@ -121,6 +132,11 @@ select option:hover {
 
 .menu a:hover {
     transform: scale(1.1);
+}
+.menu a.active {
+    font-weight: 700;
+    font-size: x-large;
+    text-decoration: underline;
 }
 /* Submenú */
 .menu-perfil {
