--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -55,8 +55,8 @@
             <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
             <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
             <!--se lo agrego aca... despues vemos bien donde lo ubicamos-->
-            <a th:href="@{/subir-archivo}" class="btn_subir_archivos">
-                <img th:src="@{/imagenes/pdf-icon.png}" alt="icono-pdf">Mis archivos
+            <a th:href="@{/herramientas-IA.html}" class="btn_subir_archivos">
+                <img th:src="@{/imagenes/pdf-icon.png}" alt="icono-pdf">Herramientas de IA
             </a>
             <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
             <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
