--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/herramientas-IA.html
@@ -61,7 +61,7 @@
                                 <input type="radio" name="archivoSeleccionado" th:id="'archivo__' + ${iterStat.index}" th:value="${archivo}" th:checked="${iterStat.index == 0}" />
                             <img th:src="@{/imagenes/pdf-icon.png}" alt="PDF" class="icono-pdf">
                             <label th:for="'archivo__' + ${iterStat.index}" >
-                                <a th:href="@{'/archivos_pdf/' + ${archivo}}" target="_blank" th:text="${archivo}"></a></a>
+                                <a th:href="@{'/archivos_pdf/' + ${archivo}}" target="_blank" th:text="${archivo}"></a>
                             </label>
                         </li>
                     </ul>
@@ -71,11 +71,11 @@
         </article>
 
         <article class="estructura">
-                    <h3>Resumen  generado a partir del pdf subido</h3>
-            <!--el pre mantiene los saltos de linea y los espacios
-            th:utext muestra el texto sin escaparlo, así los saltos de línea se ven como el usuario espera.-->
-                    <pre th:if="${resumen}" th:utext="${resumen}"></pre>
-                    <button>guardar como pdf</button>
+            <h3>Resumen generado a partir del pdf subido</h3>
+            <div class="resumen-ia-display" th:if="${resumen}" th:utext="${resumen}">
+
+            </div>
+            <button>guardar como pdf</button>
         </article>
     </section>
 
