se arregla eliminar que no pueda otro usuario, ----cambio dto.setUsuarioId(p.getUsuario().getId())

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -71,7 +71,7 @@
         </article>
         <div id="contenedor-publicaciones">
             <th:block th:each="dtopubli : ${datosPublicaciones}">
-                <div th:replace="templates/divTarjetaPublicacion :: tarjetaPublicacion(dtopubli=${dtopubli})"></div>
+                <div th:replace="templates/divTarjetaPublicacion :: tarjetaPublicacion(${dtopubli}, ${usuario})"></div>
             </th:block>
         </div>
 
