se saca del boton ver pdf (gitadd)

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/divTarjetaPublicacion.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/divTarjetaPublicacion.html
@@ -40,7 +40,7 @@
                                 class="ver-pdf-btn"
                                 th:data-id="${dtopubli.id}"
                                 th:data-url="@{'/archivosPublicacion/' + ${dtopubli.archivoNombre}}">
-                            &#128065; Ver PDFgit add
+                            &#128065; Ver PDF
                         </button>
                     </div>
 
